# karsys

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  baseapplier.h  enginemanager.cpp  enginemanager.h  flowlayout.cpp  flowlayout.h  main.cpp  mainwindow.cpp  mainwindow.h  sceneapplier.cpp  sceneapplier.h  settingsdialog.cpp  settingsdialog.h  videoapplier.cpp  videoapplier.h  wallpapercard.cpp  wallpapercard.h  wallpaperscanner.cpp  wallpaperscanner.h
plugin/: CMakeLists.txt  README.md
plugin/debian/: changelog  control
plugin/src/: CMakeLists.txt  glextra_impl.cpp  rootwidgeteventfilter.hpp  scenewidget.cpp  scenewidget.h  videoproxy.cpp  videoproxy.h  videowallpapermenuscene.h  wallpaperconfig.cpp  wallpaperconfig.h  wallpaperconfig_p.h  wallpaperengine.cpp  wallpaperengine.h  wallpaperengine_p.h
